--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div id="wrapper">
     <h1>Yoshio Yasuoka</h1>
-    <p>
-      <img src="yyn562.jpg" width="200" height="214">
+    <p id="pic">
+      <img src="yyn562.jpg">
     </p>
     <h2>MBA candidate</h2>
     <h3>Evanston, IL</h3>
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div>
-      <h4>Summary</h4>
+      <h4 id="summary">Summary</h4>
       <p>
         Yoshio studied at Waseda University majoring in Architecture. Prior to Kellogg, Yoshio worked for a consulting firm for 3.5 years and then founded and ran his own consulting firm. Most recently he worked for PwC as a consultant, an auditor and an intra-company consultant. 
       </p>
@@ -40,14 +40,14 @@
       </div>
     </div>
     <div>
-      <h4>Skills</h4>
+      <h4 class="unicorns">Skills</h4>
       <ul>
         <li>Finance</li>
         <li>Accounting</li>
       </ul>
     </div>
     <div>
-      <h4>Hobbies</h4>
+      <h4 class="unicorns">Hobbies</h4>
       <ul>
         <li>Manga</li>
       </ul>
