--- a/index.html
+++ b/index.html
@@ -8,50 +8,89 @@
 </head>
 <body>
   <div id="wrapper">
-    <h1>Yoshio Yasuoka</h1>
-    <p id="pic">
-      <img src="yyn562.jpg">
-    </p>
-    <h2>MBA candidate</h2>
-    <h3>Evanston, IL</h3>
-    <div>
-      <h4>Connect With Me</h4>
+    <div class="header">
+      <h1>Yoshio Yasuoka</h1>
+    </div>
+    <!-- navigation  -->
+    <div class="navigation">
       <ul>
-        <li><a href="mailto:yyasuoka2017@kellogg.northwestern.edu">Email</a></li>
-        <li><a href="http://twitter.com/yoshioyasuoka">Twitter</a></li>
-        <li><a href="http://facebook.com/yoshioyasuoka">Facebook</a></li>
+        <li><a href="">home</a></li>
+        <li><a href="">blog</a></li>
+        <li><a href="">photos</a></li>
+        <li><a href="">profile</a></li>
       </ul>
     </div>
-    <div>
-      <h4 id="summary">Summary</h4>
-      <p>
-        Yoshio studied at Waseda University majoring in Architecture. Prior to Kellogg, Yoshio worked for a consulting firm for 3.5 years and then founded and ran his own consulting firm. Most recently he worked for PwC as a consultant, an auditor and an intra-company consultant. 
-      </p>
+    <!-- right block  --> 
+    <div class="right">
+      <div id="profile">
+        <div class="avatar">
+          <p id="pic">
+            <img src="yyn562.jpg">
+          </p>
+        </div>
+        <div class="description">
+          <p>
+            MBA Candidate, Class of 2016</br>
+            Kellogg School of Management</br>
+            Northwestern University
+          </p>        
+        </div>
+        <div id="connectwithme">
+          <ul>
+            <li><a href="mailto:yyasuoka2017@kellogg.northwestern.edu">Email</a></li>
+            <li><a href="http://facebook.com/yoshioyasuoka">Facebook</a></li>
+            <li><a href="http://twitter.com/yoshioyasuoka">Twitter</a></li>
+          </ul>
+        </div>
+      </div>
+      <div id="FacebookPhotos">
+        <div id="sidebarPhotosTitle">
+          <a>photos</a>
+        </div>
+          <ul class="sidebarPhotos">
+              <li>
+                <a href=""><img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xlf1/v/t1.0-9/11951987_10153042118256109_1759324151344278889_n.jpg?oh=df0705657b44f6bdff734935f965935d&oe=57116261"></a>
+                <a href=""><img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xfa1/v/t1.0-9/10421273_4509494735144_4772320317228679426_n.jpg?oh=672ad73c4e118fe060114bdd35a781c5&oe=56FD5EEC"></a>
+                <a href=""><img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xaf1/v/t1.0-9/11811582_839365466178032_7072643281624502292_n.jpg?oh=dece36f6dfd98c9ff26bb891f6bbd3a0&oe=570EC3BC"></a>
+                <a href=""><img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xat1/t31.0-8/11895002_10206617090678840_2419621015264956162_o.jpg"></a>
+              </li>
+          </ul>
+      </div>
     </div>
-    <div>
-      <h4>Experience</h4>
+    
+    <!-- left block  --> 
+    <div class="left">
       <div>
-        <h5>Senior Associate, PwC</h5>
-        <p>PwC is a global accounting firm providing professional services to companies all around the world.</p>
+        <h4 id="WorkingExperience">Working Experience</h4>
+        <p>
+          Yoshio studied at Waseda University majoring in Architecture. Prior to Kellogg, Yoshio worked for a consulting firm for 3.5 years and then founded his own consulting firm. Most recently he worked for PwC as a consultant, an auditor and an intra-company consultant. 
+        </p>
       </div>
       <div>
-        <h5>Founder, Yasuoka consulting</h5>
-        <p>Yasuoka consulting provided organaizational and marketing advisory services for mainly SMEs in Japan.</p>
+        <h4>Position</h4>
+        <div>
+          <h5>Senior Associate, PwC</h5>
+          <p>PwC is a global accounting firm providing professional services to companies all around the world.</p>
+        </div>
+        <div>
+          <h5>Founder, Yasuoka consulting</h5>
+          <p>Yasuoka consulting provided organaizational and marketing advisory services for mainly SMEs in Japan.</p>
+        </div>
       </div>
-    </div>
+      <div>
+        <h4 class="unicorns">Skills</h4>
+        <ul>
+          <li>Finance</li>
+          <li>Accounting</li>
+        </ul>
+      </div>
+      <div>
+        <h4 class="unicorns">Hobbies</h4>
+        <ul>
+          <li>Manga</li>
+        </ul>
+      </div>
     <div>
-      <h4 class="unicorns">Skills</h4>
-      <ul>
-        <li>Finance</li>
-        <li>Accounting</li>
-      </ul>
-    </div>
-    <div>
-      <h4 class="unicorns">Hobbies</h4>
-      <ul>
-        <li>Manga</li>
-      </ul>
-    </div>
   </div>
 </body>
 </html>
