--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Yoshio Yasuoka, MBA candidate</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style2.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
