--- a/favorites.html
+++ b/favorites.html
@@ -89,25 +89,13 @@
         </div>
         <!-- middle block  --> 
         <div class="col-md-6">
-          <div class="middle">
-            <h4 id="WorkingExperience">Working Experience</h4>
-              <p>
-                Yoshio studied at Waseda University majoring in Architecture. Prior to Kellogg, Yoshio worked for a consulting firm for 3.5 years and then founded his own consulting firm. Most recently he worked for PwC as a consultant, an auditor and an intra-company consultant.<br></br>
-              </p>
-            <h4>Position</h4>
-              <h5>Senior Associate, PwC</h5>
-              <p>PwC is a global accounting firm providing professional services to companies all around the world.</p>
-              <h5>Founder, Yasuoka consulting</h5>
-              <p>Yasuoka consulting provided organaizational and marketing advisory services for mainly SMEs in Japan.<br></br></p>
-            <h4 class="unicorns">Skills</h4>
-            <ul>
-              <li>Finance</li>
-              <li>Accounting<br></br></li>
-            </ul>
-            <h4 class="unicorns">Hobbies</h4>
-            <ul>
-              <li>Manga</li>
-            </ul>
+          <div class="favorite-movie">
+            <h4>Favorite Movie</h4>
+            <iframe width="500" height="315" src="https://www.youtube.com/embed/7GqClqvlObY" frameborder="0" allowfullscreen></iframe>
+          </div>
+          <div class="favorite-song">
+            <h4>Favorite Song</h4>
+            <iframe width="500" height="315" src="https://www.youtube.com/embed/KPgEoDt_Duc" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <!-- right block  --> 
