--- a/photo.html
+++ b/photo.html
@@ -89,25 +89,39 @@
         </div>
         <!-- middle block  --> 
         <div class="col-md-6">
-          <div class="middle">
-            <h4 id="WorkingExperience">Working Experience</h4>
-              <p>
-                Yoshio studied at Waseda University majoring in Architecture. Prior to Kellogg, Yoshio worked for a consulting firm for 3.5 years and then founded his own consulting firm. Most recently he worked for PwC as a consultant, an auditor and an intra-company consultant.<br></br>
-              </p>
-            <h4>Position</h4>
-              <h5>Senior Associate, PwC</h5>
-              <p>PwC is a global accounting firm providing professional services to companies all around the world.</p>
-              <h5>Founder, Yasuoka consulting</h5>
-              <p>Yasuoka consulting provided organaizational and marketing advisory services for mainly SMEs in Japan.<br></br></p>
-            <h4 class="unicorns">Skills</h4>
-            <ul>
-              <li>Finance</li>
-              <li>Accounting<br></br></li>
-            </ul>
-            <h4 class="unicorns">Hobbies</h4>
-            <ul>
-              <li>Manga</li>
-            </ul>
+          <div class="row">
+            <div class="col-md-6">
+              <a href="#" class="thumbnail">
+                <img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xlf1/v/t1.0-9/11951987_10153042118256109_1759324151344278889_n.jpg?oh=df0705657b44f6bdff734935f965935d&oe=57116261">
+              </a>
+            </div>
+            <div class="col-md-6">
+              <a href="#" class="thumbnail">
+                <img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xfa1/v/t1.0-9/10421273_4509494735144_4772320317228679426_n.jpg?oh=672ad73c4e118fe060114bdd35a781c5&oe=56FD5EEC">
+              </a> 
+            </div>
+            <div class="col-md-6">
+              <a href="#" class="thumbnail"> 
+                <img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xaf1/v/t1.0-9/11811582_839365466178032_7072643281624502292_n.jpg?oh=dece36f6dfd98c9ff26bb891f6bbd3a0&oe=570EC3BC">
+              </a>
+            </div>
+            <div class="col-md-6">
+              <a href="#" class="thumbnail">    
+                <img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xtf1/t31.0-8/11951468_10206617095718966_338500125817020776_o.jpg">
+              </a>
+            </div>
+            <div class="col-md-12">
+            </div>
+            <div class="col-md-6">
+              <a href="#" class="thumbnail">    
+                <img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xat1/t31.0-8/11895002_10206617090678840_2419621015264956162_o.jpg">
+              </a>
+            </div>
+            <div class="col-md-6">
+              <a href="#" class="thumbnail">    
+                <img src="https://scontent.ford1-1.fna.fbcdn.net/hphotos-xfa1/t31.0-8/11885115_10206617090398833_931445287137773951_o.jpg">
+              </a>
+            </div>
           </div>
         </div>
         <!-- right block  --> 
