--- a/favorites.html
+++ b/favorites.html
@@ -90,12 +90,16 @@
         <!-- middle block  --> 
         <div class="col-md-6">
           <div class="favorite-movie">
-            <h4>Favorite Movie</h4>
-            <iframe width="500" height="315" src="https://www.youtube.com/embed/7GqClqvlObY" frameborder="0" allowfullscreen></iframe>
+            <div class="col-md-12">
+              <h4>Favorite Movie</h4>
+              <iframe width="500" height="315" src="https://www.youtube.com/embed/7GqClqvlObY" frameborder="0" allowfullscreen></iframe>
+            </div>
           </div>
           <div class="favorite-song">
-            <h4>Favorite Song</h4>
-            <iframe width="500" height="315" src="https://www.youtube.com/embed/KPgEoDt_Duc" frameborder="0" allowfullscreen></iframe>
+            <div class="col-md-12">
+              <h4>Favorite Song</h4>
+              <iframe width="500" height="315" src="https://www.youtube.com/embed/KPgEoDt_Duc" frameborder="0" allowfullscreen></iframe>
+            </div>
           </div>
         </div>
         <!-- right block  --> 
